<resources>
    <string name="app_name">Asg2_Lock</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_back">BACK</string>
    <string name="btn_open">OPEN</string>
    <string name="success">Successfully Logged In</string>
    <string name="name">Muhammad Ahmad</string>
    <string name="reg">FA19-BCS-010</string>
    <string name="pass">Password: 0000</string>
</resources>