<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/main_btn_1"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="50dp"
        android:layout_marginTop="240dp"
        android:backgroundTint="#C1C1C1"
        android:text="@string/btn_1"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_btn_2"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="240dp"
        android:backgroundTint="@color/custom_grey"
        android:text="@string/btn_2"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/main_btn_3"
        app:layout_constraintStart_toEndOf="@+id/main_btn_1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_btn_3"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/custom_grey"
        android:text="@string/btn_3"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_btn_4"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/custom_grey"
        android:text="@string/btn_4"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_1" />

    <Button
        android:id="@+id/main_btn_5"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/custom_grey"
        android:text="@string/btn_5"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/main_btn_6"
        app:layout_constraintStart_toEndOf="@+id/main_btn_4"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_2" />

    <Button
        android:id="@+id/main_btn_6"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/custom_grey"
        android:text="@string/btn_6"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_3" />

    <Button
        android:id="@+id/main_btn_7"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/custom_grey"
        android:text="@string/btn_7"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_4" />

    <Button
        android:id="@+id/main_btn_8"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/custom_grey"
        android:text="@string/btn_8"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/main_btn_9"
        app:layout_constraintStart_toEndOf="@+id/main_btn_7"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_5" />

    <Button
        android:id="@+id/main_btn_9"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/custom_grey"
        android:text="@string/btn_9"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_6" />

    <Button
        android:id="@+id/main_btn_0"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/custom_grey"
        android:text="@string/btn_0"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_7" />

    <TextView
        android:id="@+id/main_tv_pass"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="165dp"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/main_btn_back"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/custom_grey"
        android:text="@string/btn_back"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/main_btn_open"
        app:layout_constraintStart_toEndOf="@+id/main_btn_0"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_8" />

    <Button
        android:id="@+id/main_btn_open"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/custom_grey"
        android:text="@string/btn_open"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_9" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/reg"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>